# OSY

Colloquium3/: Сolloquium3.docx
ColloquiumTask/: CMakeLists.txt  README.md
ColloquiumTask/src/: fibonacci.cpp  fibonacci.h  list_node.h  main.cpp  palindrome.cpp  palindrome.h  reverse_list.cpp  reverse_list.h
ColloquiumTask/tests/: test.cpp
Coloquium2/: CMakeLists.txt  main.cpp  singleton_orthogonal_strategies.hpp
Coloquium4/: CMakeLists.txt  filesystem_nodes.hpp  main.cpp  sync_policy.hpp  tests.cpp  visitor.hpp
lab2/src/: minmax.cpp
laba3/src/: main.cpp
